--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-binance_historical_data==0.1.14
-catboost==1.2.2
-colorama==0.4.6
-imbalanced_learn==0.11.0
-imblearn==0.0
-joblib==1.3.2
-keras==2.14.0
-matplotlib==3.8.0
-mplfinance==0.12.10b0
-numba==0.58.1
-numpy==1.23.5
-pandas==2.2.2
-Pillow==9.4.0
-Pillow==10.4.0
-python-decouple==3.8
-python-telegram-bot==21.5
-pyts==0.13.0
-scikit_learn==1.3.1
-sortedcontainers==2.4.0
-statsmodels==0.14.1
-TA_Lib==0.4.28
-tensorflow==2.14.0
-tensorflow_intel==2.14.0
+tensorflow
+keras
+pandas
+scikit-learn
+fsspec
+boto3
